samples/_failures_safe/1761001862_2c67d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_752a3609.c: In function ‘main’:
./samples/SAFE/__tmp_752a3609.c:144:59: error: ‘CL’ undeclared (first use in this function)
  144 |     double cpu_time = ((double)(end_time - start_time)) / CL
      |                                                           ^~
./samples/SAFE/__tmp_752a3609.c:144:59: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_752a3609.c:144:5: error: expected ‘,’ or ‘;’ at end of input
  144 |     double cpu_time = ((double)(end_time - start_time)) / CL
      |     ^~~~~~
./samples/SAFE/__tmp_752a3609.c:144:5: error: expected declaration or statement at end of input
